# LiteServe

./: .gitignore  Dockerfile  LICENSE  LiteServe_Technical_Proposal.docx  README.md  docker-compose.yml  pyproject.toml
benchmarks/: benchmark.py  colab_benchmark.ipynb  locustfile.py
configs/: default.yaml  gpu.yaml  local.yaml  prometheus.yml
dashboards/: liteserve-dashboard.json
liteserve/: __init__.py  config.py
liteserve/engine/: __init__.py  inference.py  kv_cache.py  types.py
liteserve/metrics/: __init__.py  collector.py
liteserve/models/: __init__.py  loader.py
liteserve/router/: __init__.py  router.py
liteserve/scheduler/: __init__.py  scheduler.py
liteserve/server/: __init__.py  app.py
scripts/: benchmark_comparison.py  evaluate_perplexity.py  send_request.py  setup.sh  validate.py  verify_batching.py
tests/: test_config.py  test_inference_batching.py  test_kv_cache.py  test_metrics.py  test_router.py  test_scheduler.py  test_types.py
